kubernetes/apps/base/development/backstage/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: development
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
  hostnames:
    - 'backstage.${CLUSTER_DOMAIN}'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2/
      backendRefs:
        - name: oauth2-proxy
          namespace: network-system
          port: 80
          weight: 100
    - backendRefs:
        - name: backstage
          port: 7007
          weight: 100
