kubernetes/apps/base/development/backstage/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: backstage-auth
  namespace: development
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: backstage
  extAuth:
    failOpen: false
    headersToExtAuth:
      - cookie
      - authorization
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          namespace: network-system
          port: 80
      headersToBackend:
        - x-auth-request-user
        - x-auth-request-email
        - x-auth-request-groups
        - authorization
